--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,7 +13,7 @@ const links = [
   <div class="container header-inner">
     <a class="brand" href="/">
       <span class="brand-mark" aria-hidden="true"></span>
-      <span class="brand-text">Kanda Designers</span>
+      <span class="brand-text">K & A Designers</span>
     </a>
 
     <nav class="nav" aria-label="Primary">
