--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import Nav from "@/components/Nav.astro";
 
 const {
   title = "K & A Designers",
-  description = "Portfolio site for Alex + Jessica K & A.",
+  description = "Portfolio site for Alex Anderson + Kristina Anderson.",
 } = Astro.props;
 ---
 
